@@ -3,6 +3,7 @@ package com.pm.personnelmanagement.config;
 import com.pm.personnelmanagement.user.constant.DefaultRoleNames;
 import com.pm.personnelmanagement.user.service.UserService;
 import com.pm.personnelmanagement.user.util.UserUtils;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -28,10 +29,14 @@ import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @EnableWebSecurity
 @Configuration
 public class WebSecurityConfig {
+    @Value("${app.client.url}")
+    private String clientUrl;
 
     @Bean
     public UserDetailsService userService(UserUtils userUtils) {
@@ -78,7 +83,6 @@ public class WebSecurityConfig {
                     .requestMatchers(HttpMethod.POST, "/api/attendances", "/api/attendances/**").hasAnyRole(DefaultRoleNames.ADMIN, DefaultRoleNames.MANAGER)
                     .requestMatchers(HttpMethod.PATCH, "/api/attendances", "/api/attendances/**").hasAnyRole(DefaultRoleNames.ADMIN, DefaultRoleNames.MANAGER)
                     .requestMatchers(HttpMethod.DELETE, "/api/attendances", "/api/attendances/**").hasAnyRole(DefaultRoleNames.ADMIN, DefaultRoleNames.MANAGER)
-                    .requestMatchers("/api/config/init").permitAll()
                     .requestMatchers(HttpMethod.POST, "/api/config/**").hasRole(DefaultRoleNames.ADMIN)
                     .requestMatchers(HttpMethod.GET, "/uploads/**", "/api/config/logo").permitAll()
                     .requestMatchers(HttpMethod.POST, "/login").permitAll()
@@ -95,14 +99,13 @@ public class WebSecurityConfig {
         http.securityContext(security -> {
             security.securityContextRepository(securityContextRepository);
         });
-
         return http.build();
     }
 
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        corsConfiguration.setAllowedMethods(Arrays.asList("*"));
+        corsConfiguration.setAllowedOrigins(Collections.singletonList(clientUrl));
+        corsConfiguration.setAllowedMethods(List.of("*"));
         corsConfiguration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
@@ -134,7 +137,7 @@ public class WebSecurityConfig {
             @Override
             public void addCorsMappings(CorsRegistry registry) {
                 registry.addMapping("/**")
-                        .allowedOrigins("http://localhost:5173")  // Określ dokładny adres, z którego pochodzą żądania
+                        .allowedOrigins(clientUrl)
                         .allowedMethods("*")
                         .allowedHeaders("*")
                         .allowCredentials(true);
